compiling_error.txt
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c: In function ‘LerArqCasa’:
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:14:14: error: ‘Num_Imov’ undeclared (first use in this function)
   tCasa casa[Num_Imov];
              ^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:14:14: note: each undeclared identifier is reported only once for each function it appears in
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:24:27: warning: passing argument 2 of ‘fgets’ makes integer from pointer without a cast [-Wint-conversion]
     fgets(casa[i].titulo, "%s", imoveis);
                           ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:564:14: note: expected ‘int’ but argument is of type ‘char *’
 extern char *fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
              ^~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:36:10: error: ‘terreno’ undeclared (first use in this function); did you mean ‘tTerreno’?
       if(terreno[i].status == 0){
          ^~~~~~~
          tTerreno
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:55:10: warning: ‘return’ with a value, in function returning void
   return 0;
          ^
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:11:6: note: declared here
 void LerArqCasa()
      ^~~~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c: In function ‘LerArqApartamento’:
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:61:28: error: ‘Num_Imov’ undeclared (first use in this function)
   tApartamento apartamento[Num_Imov];
                            ^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:71:34: warning: passing argument 2 of ‘fgets’ makes integer from pointer without a cast [-Wint-conversion]
     fgets(apartamento[i].titulo, "%s", imoveis);
                                  ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:564:14: note: expected ‘int’ but argument is of type ‘char *’
 extern char *fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
              ^~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:72:12: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
     fscanf("%d", &apartamento[i].andar);
            ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ {aka ‘struct _IO_FILE * restrict’} but argument is of type ‘char *’
 extern int fscanf (FILE *__restrict __stream,
                    ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:73:12: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
     fscanf("%d", &apartamento[i].quartos);
            ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ {aka ‘struct _IO_FILE * restrict’} but argument is of type ‘char *’
 extern int fscanf (FILE *__restrict __stream,
                    ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:74:12: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
     fscanf("%d", &apartamento[i].vagas_garagem);
            ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ {aka ‘struct _IO_FILE * restrict’} but argument is of type ‘char *’
 extern int fscanf (FILE *__restrict __stream,
                    ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:75:12: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
     fscanf("%lf", &apartamento[i].area);
            ^~~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ {aka ‘struct _IO_FILE * restrict’} but argument is of type ‘char *’
 extern int fscanf (FILE *__restrict __stream,
                    ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:76:12: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
     fscanf("%lf", &apartamento[i].valor_condominio);
            ^~~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ {aka ‘struct _IO_FILE * restrict’} but argument is of type ‘char *’
 extern int fscanf (FILE *__restrict __stream,
                    ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:77:12: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
     fscanf("%lf", &apartamento[i].preco);
            ^~~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ {aka ‘struct _IO_FILE * restrict’} but argument is of type ‘char *’
 extern int fscanf (FILE *__restrict __stream,
                    ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:78:35: warning: passing argument 2 of ‘fgets’ makes integer from pointer without a cast [-Wint-conversion]
     fgets(apartamento[i].posicao, "%s", imoveis);
                                   ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:564:14: note: expected ‘int’ but argument is of type ‘char *’
 extern char *fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
              ^~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:79:12: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
     fscanf("%i", &apartamento[i].status);
            ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ {aka ‘struct _IO_FILE * restrict’} but argument is of type ‘char *’
 extern int fscanf (FILE *__restrict __stream,
                    ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:85:10: error: ‘terreno’ undeclared (first use in this function); did you mean ‘tTerreno’?
       if(terreno[i].status == 0){
          ^~~~~~~
          tTerreno
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:110:12: warning: ‘return’ with a value, in function returning void
     return 0;
            ^
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:58:6: note: declared here
 void LerArqApartamento()
      ^~~~~~~~~~~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c: In function ‘LerArqTerreno’:
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:117:20: error: ‘Num_Imov’ undeclared (first use in this function)
   tTerreno terreno[Num_Imov];
                    ^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:127:30: warning: passing argument 2 of ‘fgets’ makes integer from pointer without a cast [-Wint-conversion]
     fgets(terreno[i].titulo, "%s", imoveis);
                              ^~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:564:14: note: expected ‘int’ but argument is of type ‘char *’
 extern char *fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
              ^~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:139:14: warning: passing argument 1 of ‘printf’ from incompatible pointer type [-Wincompatible-pointer-types]
       printf(imoveis, "%s\n", terreno[i].titulo);
              ^~~~~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:332:43: note: expected ‘const char * restrict’ but argument is of type ‘FILE *’ {aka ‘struct _IO_FILE *’}
 extern int printf (const char *__restrict __format, ...);
                    ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:141:14: warning: passing argument 1 of ‘printf’ from incompatible pointer type [-Wincompatible-pointer-types]
       printf(imoveis, "%d\n", terreno[i].area);
              ^~~~~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:332:43: note: expected ‘const char * restrict’ but argument is of type ‘FILE *’ {aka ‘struct _IO_FILE *’}
 extern int printf (const char *__restrict __format, ...);
                    ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:143:14: warning: passing argument 1 of ‘printf’ from incompatible pointer type [-Wincompatible-pointer-types]
       printf(imoveis, "%lf\n", terreno[i].preco);
              ^~~~~~~
In file included from /home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:1:
/usr/include/stdio.h:332:43: note: expected ‘const char * restrict’ but argument is of type ‘FILE *’ {aka ‘struct _IO_FILE *’}
 extern int printf (const char *__restrict __format, ...);
                    ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:148:10: warning: ‘return’ with a value, in function returning void
   return 0;
          ^
/home/farias/Documentos/ProjetoLab_LP1/Ler_Arquivo.c:113:6: note: declared here
 void LerArqTerreno()
      ^~~~~~~~~~~~~
